# trp-week-2

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  Dockerfile  README.md  list_models.py  pyproject.toml  report.md  rubric.json  rubric_smoke.json  test_docling.py  test_gemini.py  test_judge.py
audit/: interim_evaluation_report.md
audit/debug_output/: report.md
audit/report_bypeer_received/: README.md
audit/report_onpeer_generated/: README.md  report.md
audit/report_onself_generated/: report.md
audit/smoke_test/: report.md
reports/: detective_evaluation_v4.md  final_report.md  final_submission.md  honest_evaluation_presentation_v2_2026-02-28.md  interim_report.md  interim_report_improved.md  test.md  test2.md
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py  vision_tools.py
tests/: test_persona_divergence.py  test_topology.py
